# apps-docs

./: .gitignore  .mdlrc  .stylelintignore  CONTRIBUTING.md  LICENSE  README.md  requirements-module_stats.txt  setup.cfg
.github/workflows/: flake8.yml  unit.yml
scripts/: README.md  activate.sh  add_application_version.py  add_module_info.py  add_module_info.sh  application.py  architecture.py  bear_apps_version.py  count.py  current_version.py  delete.py  delete_arch.py  delete_bav.py  delete_hidden.py  delete_noversions.py  find_missing_modules.py  framework.py  functions.py  hide.py  hiding.py  hiding.sh  java.py  load_all_modules_from_directory.sh  merge_applications.py  module_stats.py  openfoam.py  paragraphs.py  problems.py  version.py
src/apps-docs/: .pa11yci
src/apps-docs/bear_applications/: apps.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
src/apps-docs/bear_applications/fixtures/: db.json
src/apps-docs/bear_applications/migrations/: 0001_initial.py  0002_auto_20191002_0914.py  0003_auto_20191002_1822.py  0004_auto_20191002_1846.py  0005_auto_20191003_0844.py  0006_auto_20191007_1408.py  0007_auto_20191008_0832.py  0008_auto_20191008_1255.py  0009_auto_20191009_1456.py  0010_auto_20191015_0849.py  0011_auto_20191015_0857.py  0012_auto_20200210_1109.py  0013_bearappsversion_is_deprecated.py  0014_auto_20200211_1653.py  0015_architecture_hidden.py  0016_version_dependencies.py  0022_gpu.py  (+5 more)
src/apps-docs/core/: baskerville.json  bear.json  context_processors.py  local_settings.example.py  local_settings.test.py  settings.py  urls.py  wsgi.py
(+46 files in other folders)
