[metadata]
name = apps-docs
version = 0.0.1
author = BEAR Software
author_email = bear-software@contacts.bham.ac.uk
description = BEAR Apps / Baskerville Apps Django sites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bear-rsg/apps-docs
project_urls =
    Bug Tracker = https://github.com/bear-rsg/apps-docs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Django~=3.2.0
    django-extensions
    tqdm
    packaging~=21.0

[options.extras_require]
testing =
    coverage
    testfixtures
    pytest
    pytest-mock
linting =
    curlylint
    flake8
mysql =
    mysqlclient~=2.0.0
postgres =
    psycopg2-binary

[options.packages.find]
where = src

[flake8]
exclude = .git,venv,*migrations*
max-line-length = 120

# When testing the scripts we need to have imports after setting the path, so ignore E402
# Allow break after binary operator, so ignore W504
ignore = E402,W504
